--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ie.cit.cad.shopping</groupId>
-  <artifactId>shopping</artifactId>
+  <groupId>shopping</groupId>
+  <artifactId>ie.cit.cad.shopping</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <description>				</description>
@@ -11,6 +11,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   		<groupId>javax.servlet</groupId>
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
+  	</dependency>
+  	<dependency>
+  	<groupId>javax.servlet</groupId>
+  	<artifactId>servlet-api</artifactId>
+  	<version>2.5</version>
   	</dependency>
   </dependencies>
 </project>
