--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,24 @@ xmlns:xml="http://www.w3.org/XML/1998/namespace"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd ">
 
+
+<filter>
+	<filter-name>hiddenMethodFilter</filter-name>
+	<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+</filter>
+<filter-mapping>
+	<filter-name>hiddenMethodFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
+
 <servlet>
 	<servlet-name>shoppingServlet</servlet-name>
 	<servlet-class>ie.cit.aolivera.ShoppingServlet</servlet-class>
@@ -13,5 +31,6 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 	<servlet-name>shoppingServlet</servlet-name>
 	<url-pattern>/shopping</url-pattern>
 </servlet-mapping>
+
 
 </web-app>
