--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,23 +14,23 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 	<url-pattern>/*</url-pattern>
 </filter-mapping>
 
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
- 
-	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener>
+<listener>
+	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>
+
+<listener>
+	<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+</listener>
+	
 
 <servlet>
-	<servlet-name>shoppingServlet</servlet-name>
-	<servlet-class>ie.cit.aolivera.ShoppingServlet</servlet-class>
+	<servlet-name>dispatcher</servlet-name>
+	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 </servlet>
 
 <servlet-mapping>
-	<servlet-name>shoppingServlet</servlet-name>
-	<url-pattern>/shopping</url-pattern>
+	<servlet-name>dispatcher</servlet-name>
+	<url-pattern>/*.html</url-pattern>
 </servlet-mapping>
-
 
 </web-app>
