--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-5p %d %c - %m%n
  
 #log4j.logger.org.springframework.web=TRACE 
-log4j.logger.org.springframework.jdbc=TRACE
+log4j.logger.org.springframework.jdbc=INFO
+log4j.logger.ie.cit.aolivera=TRACE
 #INFO
  
