with rest and different usage for my app

--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,2 +1,6 @@
-alberto=1a1dc91c907325c69271ddf0c944bc72,ROLE_USER
+#pass
 igor=1a1dc91c907325c69271ddf0c944bc72,ROLE_USER
+#a
+a=0cc175b9c0f1b6a831c399e269772661,ROLE_USER
+#z
+Z=fbade9e36a3f36d3d676c1b808451dd7,ROLE_USER
