--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>cloudfoundry-runtime</artifactId>
 			<version>0.8.2</version>
 		</dependency>
+		<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.12</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
@@ -85,3 +90,5 @@
 		</repository>
 	</repositories>
 </project>
+
+            
